--- a/src/components/WorkCardStyle.css
+++ b/src/components/WorkCardStyle.css
@@ -1,7 +1,3 @@
-.project-heading{
-    text-align: center;
-    padding: 4rem 0 2rem 0;
-}
 
 .project-container{
     max-width:1140px;
@@ -15,6 +11,7 @@
 .project-card{
     background: #1a1919;
     padding: 1.2rem 1rem;
+    margin-top: 4rem;
 }
 
 .project-card img{
