--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ ul{
   padding: 12px 32px;
   font-size: 1rem;
   text-transform: uppercase;
-  background: rgb(248,217,15);
+  background: #f8d912;
   color: #222;
   border:1px solid #fff;
   font-weight: 600;
